Enable GC logs for builds as CircleCI artifacts (#1398)